2020-08-17  Lauro Moura  <lmoura@igalia.com>

        [WPE][WebDriver] Gardening some failures

        Unreviewed test gardening.

        * TestExpectations.json:

2020-07-04  Lauro Moura  <lmoura@igalia.com>

        [WebDriver][WPE][GTK] Garden post update failures

        Unreviewed test gardening.

        * TestExpectations.json:

2020-07-03  Lauro Moura  <lmoura@igalia.com>

        [WebDriver][WPE] Update imported selenium to a version that enables WPE WebDriver tests
        https://bugs.webkit.org/show_bug.cgi?id=213916

        Reviewed by Carlos Garcia Campos.

        Also updated the importer.json file with more paths to be skipped.

        * imported/selenium/common/.classpath: Removed.
        * imported/selenium/common/src/web/css/ui-lightness/images/ui-bg_diagonals-thick_18_b81900_40x40.png:
        * imported/selenium/common/src/web/css/ui-lightness/images/ui-bg_diagonals-thick_20_666666_40x40.png:
        * imported/selenium/common/src/web/css/ui-lightness/images/ui-bg_glass_100_f6f6f6_1x400.png:
        * imported/selenium/common/src/web/css/ui-lightness/images/ui-bg_glass_100_fdf5ce_1x400.png:
        * imported/selenium/common/src/web/css/ui-lightness/images/ui-bg_glass_65_ffffff_1x400.png:
        * imported/selenium/common/src/web/css/ui-lightness/images/ui-bg_gloss-wave_35_f6a828_500x100.png:
        * imported/selenium/common/src/web/css/ui-lightness/images/ui-bg_highlight-soft_100_eeeeee_1x100.png:
        * imported/selenium/common/src/web/css/ui-lightness/images/ui-bg_highlight-soft_75_ffe45c_1x100.png:
        * imported/selenium/common/src/web/css/ui-lightness/images/ui-icons_222222_256x240.png:
        * imported/selenium/common/src/web/css/ui-lightness/images/ui-icons_228ef1_256x240.png:
        * imported/selenium/common/src/web/css/ui-lightness/images/ui-icons_ef8c08_256x240.png:
        * imported/selenium/common/src/web/css/ui-lightness/images/ui-icons_ffd27a_256x240.png: