@@ -1,3 +1,11 @@
+2020-08-30  Lauro Moura  <lmoura@igalia.com>
+
+        [WPE] Gardening some webdriver failures
+
+        Unreviewed test gardening.
+
+        * TestExpectations.json:
+
 2020-08-17  Lauro Moura  <lmoura@igalia.com>
 
         [WPE][WebDriver] Gardening some failures
